// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/monitoring/values/_raw should not render when not visible 1`] = `null`;

exports[`ui/monitoring/values/_raw should render 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    display-name
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="display-name"
      aria-readonly={true}
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in display-name"
          className="ms-Button ms-Button--icon root-109"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-110"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
              data-icon-name="SelectAll"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-1"",
                }
              }
            >
              
            </i>
          </span>
        </button>
        <button
          aria-label="Copy the value of {label} to the clipboard"
          className="ms-Button ms-Button--icon root-109"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-110"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
              data-icon-name="Copy"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-2"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": null,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            value
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/_raw should rendered a zero-width space if value is empty 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    display-name
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="display-name"
      aria-readonly={true}
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in display-name"
          className="ms-Button ms-Button--icon root-109"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-110"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-118 ms-Button-icon icon-112"
              data-icon-name="SelectAll"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-1"",
                }
              }
            >
              
            </i>
          </span>
        </button>
        <button
          aria-label="Copy the value of {label} to the clipboard"
          className="ms-Button ms-Button--icon root-109"
          data-is-focusable={true}
          onClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          type="button"
        >
          <span
            className="ms-Button-flexContainer flexContainer-110"
            data-automationid="splitbuttonprimary"
          >
            <i
              aria-hidden={true}
              className="ms-Icon root-105 css-120 ms-Button-icon icon-112"
              data-icon-name="Copy"
              style={
                {
                  "fontFamily": ""FabricMDL2Icons-2"",
                }
              }
            >
              
            </i>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": null,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            ‌
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;
